--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.11",
+    "@angular/cli": "~11.2.10",
     "@angular/common": "~11.2.11",
     "@angular/compiler": "~11.2.11",
+    "@angular/compiler-cli": "~11.2.11",
     "@angular/core": "~11.2.11",
     "@angular/forms": "~11.2.11",
     "@angular/platform-browser": "~11.2.11",
@@ -25,19 +27,18 @@
     "@types/file-saver": "^2.0.3",
     "bootstrap": "^5.1.3",
     "cors": "2.8.5",
-    "express": "4.17.1",
+    "express": "^4.17.1",
     "express-bearer-token": "2.4.0",
     "file-saver": "^2.0.5",
     "jquery": "^3.6.0",
     "mongoose": "^6.0.12",
     "mysql": "2.18.1",
     "ngx-toastr": "^14.1.4",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.3",
-    "@angular/cli": "~11.2.10",
-    "@angular/compiler-cli": "~11.2.11",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "zone.js": "~0.11.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.10",
@@ -59,7 +60,7 @@
     "tslint": "~6.1.0",
     "typescript": "~4.1.5"
   },
-  "engines":{
+  "engines": {
     "node": "14.16.1",
     "npm": "6.14.12"
   }
