--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node index.js",
+    "start": "node src/index.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
