--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "heroku-postbuild": "ng build --prod"
+    "heroku-postbuild": "ng build --prod",
+    "compile:sass": "sass sass/main.scss css/style.css -w"
   },
   "private": true,
   "dependencies": {
@@ -19,9 +20,11 @@
     "@angular/compiler-cli": "~11.2.11",
     "@angular/core": "~11.2.11",
     "@angular/forms": "~11.2.11",
+    "@angular/localize": "~11.2.11",
     "@angular/platform-browser": "~11.2.11",
     "@angular/platform-browser-dynamic": "~11.2.11",
     "@angular/router": "~11.2.11",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "@okta/jwt-verifier": "2.1.0",
     "@popperjs/core": "^2.10.2",
     "@types/file-saver": "^2.0.3",
@@ -33,6 +36,7 @@
     "jquery": "^3.6.0",
     "mongoose": "^6.0.12",
     "mysql": "2.18.1",
+    "ngx-bootstrap": "^7.1.0",
     "ngx-toastr": "^14.1.4",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
@@ -58,7 +62,8 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "sass": "^1.43.4"
   },
   "engines": {
     "node": "14.16.1",
