--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@popperjs/core": "^2.10.2",
     "@types/file-saver": "^2.0.3",
     "bootstrap": "^5.1.3",
+    "chart.js": "^2.9.4",
     "cors": "2.8.5",
     "express": "^4.17.1",
     "express-bearer-token": "2.4.0",
@@ -35,6 +36,7 @@
     "jquery": "^3.6.0",
     "mongoose": "^6.0.12",
     "mysql": "2.18.1",
+    "ng2-charts": "^2.3.0",
     "ngx-bootstrap": "^7.1.0",
     "ngx-toastr": "^14.1.4",
     "path": "^0.12.7",
